--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "nuxt": "3.0.0-rc.6"
   },
   "dependencies": {
-    "firebase": "^9.9.1"
+    "firebase": "^9.9.1",
+    "mdi": "^2.2.43",
+    "sass": "^1.54.2",
+    "vuetify": "^3.0.0-beta.6"
   }
 }
