--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "nuxt": "3.0.0-rc.6"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.3.1",
     "firebase": "^9.9.1",
     "mdi": "^2.2.43",
+    "pinia-plugin-persistedstate": "^2.1.0",
     "sass": "^1.54.2",
     "vuetify": "^3.0.0-beta.6"
   }
